View Annotation Injector

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,11 +3,56 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
+    android:background="#fff"
     tools:context="ttyy.com.commonanno.demo.MainActivity">
 
     <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hello World!" />
+        android:id="@+id/tv_hello"
+        android:layout_width="220dp"
+        android:layout_height="50dp"
+        android:text="Hello World!"
+        android:textSize="18sp"
+        android:gravity="center"
+        android:background="#ff00ff"
+        android:layout_marginTop="15dp"
+        android:layout_gravity="center_horizontal"/>
+
+    <TextView
+        android:id="@+id/tv_jump"
+        android:layout_width="220dp"
+        android:layout_height="50dp"
+        android:text="Hello Library Module!"
+        android:textSize="18sp"
+        android:gravity="center"
+        android:background="#ff00ff"
+        android:layout_marginTop="15dp"
+        android:layout_gravity="center_horizontal"/>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="200dp"
+        android:layout_marginTop="15dp"
+        android:background="#ccc"
+        android:orientation="horizontal">
+
+        <ListView
+            android:id="@+id/lv_1"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="1"></ListView>
+
+        <View
+            android:layout_width="1dp"
+            android:layout_height="match_parent"
+            android:background="#f0f"/>
+
+        <ListView
+            android:id="@+id/lv_2"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="1"></ListView>
+
+    </LinearLayout>
 
 </LinearLayout>
