--- a/a_module/src/main/res/layout/activity_lib_main.xml
+++ b/a_module/src/main/res/layout/activity_lib_main.xml
@@ -1,14 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="#fff">
 
     <TextView
-        android:layout_width="match_parent"
-        android:layout_height="70dp"
-        android:text="ListView Item"
+        android:layout_width="200dp"
+        android:layout_height="100dp"
+        android:text="LibMainActivity"
+        android:layout_gravity="center"
         android:gravity="center"
-        android:textSize="16sp"
+        android:textSize="22sp"
         android:background="#efefef"/>
 
 </LinearLayout>
