make route paths to find better

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:background="#fff"
-    tools:context="ttyy.com.commonanno.demo.MainActivity">
+    tools:context="ttyy.com.commonanno.demo.home.MainActivity">
 
     <TextView
         android:id="@+id/tv_hello"
